--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Akan-name
-Akan-names refers to the Ghananian system of naming children in reference with the day,month and year they are born.The project was created on 12/12/2020
+Akan-names refers to the Ghananian system of naming children in accordance with the day,month and year they were born.The project was created on 13/12/2020
 Author
 Ngenoh Zephenia
 
@@ -9,7 +9,7 @@ This project allows every other individual to enter their dates of birth and on 
 
 ## project Set up Instructions
 * Ctrl + alt + t to open the terminal
-* now git clone https://github.com/ngenoh-zephenia/Akan-name.git
+* now git clone https://github.com/ngenohzephenia/Akan-Name.git
 * cd portfolio
 * you can use code . to open it.
 ## Known Bugs
@@ -30,13 +30,4 @@ Permission is hereby granted, free of charge, to any person obtaining a copy of 
 
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-To adopt MIT License, enter your details. You’ll have a chance to review before committing a LICENSE file to a new branch or the root of your project.
-
-Year 
-
-2020
-Full name 
-
-ngenohzephenia
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE 
